tests/fixtures/invalid/recursive_call_depth_limit.c
int recurse(int n) {
    return recurse(n + 1);
}

int main() {
    return recurse(0);
}
